Update title in head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     {% if page.title %}
         <title>{{ page.title }}</title>
     {% else %}
-        <title>Test Page: Don't Panic</title>
+        <title>Y-Not Foods</title>
     {% endif %}
 
     {% if page.description %}
