Add placeholder image and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,30 @@
+<footer class="navbar-default">
+    <div class="container">
+        <div class="row bottom-rule">
+            <div class="col-sm-6 footer-section">
+                <strong>Hours of Operation</strong>
 
+            </div>
+            <div class="col-sm-6 footer-section">
+                <address>
+                    <strong>Y-Not Foods</strong><br>
+                    501 Ellice Ave<br>
+                    Winnipeg, MB, R3X 0B7<br>
+                    (204) 774-0058<br>
+                </address>
+            </div>
+        </div>
 
+        <div class="row bottom-rule">
+            <nav class="navbar navbar-default navbar-footer">
+                <ul class="nav navbar-nav">
+                    {% include nav-links.html %}
+                </ul>
+            </nav>
+        </div>
+    </div>
+</footer>
+
+<!-- Scripts required for bootstrap -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
