Add hours of operation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,27 @@
     <div class="container">
         <div class="row bottom-rule">
             <div class="col-sm-6 footer-section">
-                <strong>Hours of Operation</strong>
-
+                <strong>Hours of Operation</strong><br>
+                <div class="row">
+                    <div class="col-xs-3 col-sm-3">
+                        Monday<br>
+                        Tuesday<br>
+                        Wednesday<br>
+                        Thursday<br>
+                        Friday<br>
+                        Saturday<br>
+                        Sunday<br>
+                    </div>
+                    <div class="col-xs-9 col-sm-9">
+                        8:30AM-9PM<br>
+                        8:30AM-9PM<br>
+                        8:30AM-9PM<br>
+                        8:30AM-9PM<br>
+                        8:30AM-9PM<br>
+                        9AM-9PM<br>
+                        9AM-9PM<br>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-6 footer-section">
                 <address>
