--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,3 +1,3 @@
+<li><a href="{{ site.baseurl }}/about-us">About Us</a></li>
 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
-<li><a href="#">Link 2</a></li>
 <li><a href="#">Link 3</a></li>
