Fix postal code in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
                 <address>
                     <strong>Y-Not Foods</strong><br>
                     501 Ellice Ave<br>
-                    Winnipeg, MB, R3X 0B7<br>
+                    Winnipeg, MB, R3B 1Y8<br>
                     (204) 774-0058<br>
                 </address>
             </div>
