--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,3 +1,4 @@
-<li><a href="{{ site.baseurl }}/about-us">Location</a></li>
-<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
-<li><a href="#">Link 3</a></li>
+<li><a href="{{ site.baseurl }}/about-us">About </a></li>
+<li><a href="{{ site.baseurl }}/location">Location &amp; Contacts</a></li>
+<li><a href="{{ site.baseurl }}/gallery">Gallery</a></li>
+<li><a href="{{ site.baseurl }}/korean">한국 학생</a></li>
