Add navbar-custom class to allow changing nvabar background color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <img src="https://placebear.com/100/100" alt="logo for Y-Not Foods">
     </a>
     -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-custom">
         <div class="container">
             <div class="navbar-header">
                 <!-- Dropdown menu button for smaller screens -->
