--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="{{ site.baseurl }}/" class="navbar-brand">Y-Not Foods</span></a>
+                <a href="/" class="navbar-brand">Y-Not Foods</span></a>
             </div>
             <!-- Navigation Links -->
             <div id="navbarCollapse" class="collapse navbar-collapse">
