--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,3 +1,3 @@
-<li><a href="/about-us">About </a></li>
-<li><a href="/location">Location &amp; Contact</a></li>
-<li><a href="/gallery">Gallery</a></li>
+<li><a href="{{ site.baseurl }}/about-us">About </a></li>
+<li><a href="{{ site.baseurl }}/location">Location &amp; Contact</a></li>
+<li><a href="{{ site.baseurl }}/gallery">Gallery</a></li>
