Change page title based on current page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     {% if page.title %}
         <title>{{ page.title }}</title>
     {% else %}
-        <title>Y-Not Foods</title>
+        <title>{{ site.sitename }}</title>
     {% endif %}
 
     {% if page.description %}
