Add new meta description

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     {% if page.description %}
         <meta name="description" content="{{ page.description }}">
     {% else %}
-        <meta name="description" content="Website for Y-Not Foods.">
+        <meta name="description" content="Y-Not Foods is a neighbourhood corner store across from the Duckworth Centre at the University of Winnipeg.">
     {% endif %}
 
     <!-- <link href="/favicon.png" rel="icon"> -->
