--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
         <meta name="description" content="Y-Not Foods is a neighbourhood corner store across from the Duckworth Centre at the University of Winnipeg.">
     {% endif %}
 
-    <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
 	<link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
@@ -34,9 +34,12 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-TileImage" content="/favicon-144.png">
-    <meta name="msapplication-config" content="/browserconfig.xml">
-    
+  <meta name="msapplication-config" content="/browserconfig.xml">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src='js/main.js' ></script>
 </head>
