--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,6 @@
     /*background: none;*/
 }
 
-
-
-
-
 .no-padding {
     padding: 0;
 }
@@ -70,7 +66,12 @@ footer .nav li {
     .mobile-margin{
       margin-top: 0px;
     }
+
+    .mySlides {display:none; height:75vh;}
 }
+  /*Dont let the badges change size*/
+    .w3-left, .w3-right, .w3-badge {cursor:pointer}
+    .w3-badge {height:13px;width:13px;padding:0}
 
 @media screen and (min-width: 992px) {
     html, body, .container {
