remove gallery page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,6 @@
         <meta name="description" content="Y-Not Foods is a neighbourhood corner store across from the Duckworth Centre at the University of Winnipeg.">
     {% endif %}
 
-
     <link rel="shortcut icon" href="/pictures/favicons/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="/pictures/favicons/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="/pictures/favicons/favicon-192.png">
@@ -41,8 +40,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
-
-    <script src='js/main.js' ></script>
+    <script src='{{ site.baseurl}}/js/main.js' ></script>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
