--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-.navbar-custom {
-    /*background: none;*/
-}
-
 .no-padding {
     padding: 0;
 }
@@ -10,8 +6,8 @@
     margin-top: 30px;
 }
 
-.item{
-    height:33vh;
+.item {
+    height: 33vh;
 }
 
 /* Footer Styles */
@@ -72,11 +68,11 @@ footer .nav li {
     }
 
     .item {
-        height:70vh;
+        height: 70vh;
     }
 
     .carousel-inner>.item>a>img, .carousel-inner>.item>img, .thumbnail a>img, .thumbnail>img {
-        width:100%;
+        width: 100%;
         margin: 0 auto;
     }
 }
@@ -85,6 +81,10 @@ footer .nav li {
     html, body, .container {
         width: 970px;
         margin: 0 auto;
+    }
+
+    .item {
+        max-height: 625px;
     }
 }
 
