--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,4 @@
 <header class="header">
-    <!-- LOGO HERE?
-    <a href="/" class="header-logo">
-        <img src="https://placebear.com/100/100" alt="logo for Y-Not Foods">
-    </a>
-    -->
     <nav class="navbar navbar-default navbar-custom">
         <div class="container">
             <div class="navbar-header">
@@ -14,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand">Y-Not Foods</span></a>
+                <a href="/" class="navbar-brand"><img src="{{ site.baseurl }}/pictures/favicons/favicon-57.png"></a>
             </div>
             <!-- Navigation Links -->
             <div id="navbarCollapse" class="collapse navbar-collapse">
