--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,14 @@
     margin-top: 30px;
 }
 
+.navbar-brand {
+    padding: 0;
+    margin-right: 15px;
+}
+.navbar-brand > img {
+    height: 50px;
+}
+
 
 /* Footer Styles */
 footer {
@@ -67,7 +75,6 @@ footer .nav li {
     .mobile-margin{
       margin-top: 0px;
     }
-
 }
 
 @media screen and (min-width: 992px) {
@@ -78,15 +85,5 @@ footer .nav li {
 
     .item {
         max-height: 550px;
-    }
-}
-
-@media screen and (min-width: 768px) and (orientation: portrait) {
-    .item {
-        height:40vh;
-    }
-    .carousel-inner>.item>a>img, .carousel-inner>.item>img, .thumbnail a>img, .thumbnail>img {
-        width:100%;
-        margin: 0 auto;
     }
 }
